Bug 38595 - FILEOPEN: thin double line cell borders invisible
Summary: FILEOPEN: thin double line cell borders invisible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: All All
: medium normal
Assignee: Cédric Bosdonnat
URL:
Whiteboard: target:3.4.6 target:3.5.1 target:3.6....
Keywords: regression
: 44550 (view as bug list)
Depends on:
Blocks: mab3.4 44768
  Show dependency treegraph
 
Reported: 2011-06-23 02:03 UTC by sasha.libreoffice
Modified: 2012-02-08 07:35 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
An examle file with differnent border settings (20.03 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-01-15 14:28 UTC, lml
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2011-06-23 02:03:26 UTC
To reproduce this problem:
0. Start Calc
1. Select any cell and right click on it, select there Format Cells
2. Select tab Borders
3. in left upper corner in area Line arrangement Default select second button
4. in area Line in field Style select one thick and one thin line variant
5. in field Width select 0,75 
6. press Ok. Cell appears with strange double border
7. press File->Save and save document
8. press File->Reload 
border around cell disappears when reload

Reproduced on LibO 3.4 on Mandriva 64 bit and Windows XP 32 bit

PS: When width greater then 0,75 then border not disappears but changes after reload, for examble 1.0 border becomes 1,5 border
Border looks strange if zoom of document is too small
Comment 1 Rainer Bielefeld Retired 2011-06-23 02:30:44 UTC
Oops, hit <enter> accidently

Problem is [Reproducible] in all details with "LibreOffice 3.4.1RC1  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:101)]".

Seems to be a fileopen problem, OOo 3.1.1 shows borders in LibO document (created due to original report) without problems.

Also other cell borders created with OOo 3.1.1 will not be shown in LibO, for example 2 lines different 5,05pt
Comment 2 Rainer Bielefeld Retired 2011-06-23 02:35:38 UTC
Obsolete OOo 3.4-dev shows all borders without problems 

@Kohei:
Please feel free to reassign if it’s not your area
Comment 3 Cor Nouws 2011-07-07 03:28:26 UTC
borders do not work as expected indeed
E.g. see also https://bugs.freedesktop.org/show_bug.cgi?id=37622#c33
Comment 4 Kohei Yoshida 2011-09-15 08:35:44 UTC
I'll ping Cedric to see if this rings any bell for him.  Cedric, assign this back to me if this is not related to your cell border work.
Comment 5 Rainer Bielefeld Retired 2012-01-08 03:05:40 UTC
*** Bug 44550 has been marked as a duplicate of this bug. ***
Comment 6 Rainer Bielefeld Retired 2012-01-08 03:06:38 UTC
"Bug 44550 - FILEOPEN: particular cell double borders are invisible" contains some additional results of research that might be useful for bugfixing.
Comment 7 lml 2012-01-15 14:28:50 UTC
Created attachment 55618 [details]
An examle file with differnent border settings

The attached file contains the borders with the first 8 border style using different line width. (In the attached file the last part (9th border) is not set, so it is OK without borders in the file.)

In the file every border setting can be created two ways: set the border width first or set the line style first.

I've found the following problems:

Problem 1.: border style "None":
Border exists, if you set the line style to "none". The only way to erase borders is no unset the lines in the Line arrangement section on the left.

Problem 2.:
5th-8th border style (first double borders):
At 100% zoom levels the 1.0 and 1.5pt border width the horizontal and vertical lines are displayed (or magnified) differently. (Changing zoom levels you can notice similar problems on other cells: 0.75pt at 200%, 0,5pt at 300%.)

Problem 3:
6th border style:
Borders are lost on 0.35pt and 0.5pt each way, and borders are lost if you set width first the 1, 1.1, 2.0, 5.0pt values and then the style.
7th border style:
borders are lost on 0.35, 0.75pt.


Ave also found that opening the attached file in IBM Lotus Symphony everything seems OK, all borders are exist.
But if I open (again) in LibreOffce (the borders are disappear) and resave it again the borders are truly lost.
Comment 8 Fridrich Strba 2012-01-25 02:21:14 UTC
I checked a bit more and it is the style:border-line-width property that confuses the importer. Investigating more now.
Comment 9 Eike Rathke (retired, only occasionally showing up) 2012-01-26 05:13:59 UTC
Resolved in master http://cgit.freedesktop.org/libreoffice/core/commit/?id=34315e7ec4062f9521cd19951b5f7f6ad9ce0d2e
Comment 10 Eike Rathke (retired, only occasionally showing up) 2012-02-02 13:05:30 UTC
Also available in 3-5 as 6e891a42560c6811e490fc68c90b8477e71d281a, but didn't make it into 3-5-0 on time.
Comment 12 sasha.libreoffice 2012-02-08 07:35:50 UTC
Thanks!