resolved fdo#38595 border width lost in ODF import